fixed animation overflowing and fixed slide index count

--- a/css/style.css
+++ b/css/style.css
@@ -700,6 +700,7 @@ input {
   display: -ms-grid;
   display: grid;
       grid-template-areas: "image image" "steps steps" "content content" "actions actions";
+  overflow: hidden;
 }
 
 .form-steps.form-opened {
